   * Added support for observers to pause and continue the game at any time
   * Fixed bug #12896: Map generator does not sync between clients when
     advancing in MP campaigns
   * Updated maps: 4p Clash.
 * Terrains:
   * Enabled mixed deciduous-pine forest terrains
   * New merman village terrain variations
 * User interface:
   * Fixed an exception when certain characters weren't escaped
 * WML Engine
   * [replace_map] changes the map completely, changing the map size is 
     posible - off-map units go into the recall list
 * Miscellaneous and bug fixes:
   * Fix bug #12946: [menu_item]/[command] losing function when called again
   * Fix flickering of units in the second part of the tutorial (bug #12923)
   * Fix high CPU usage in multiplayer lobby due to inefficient handling of
     friends and ignores lists.
   * AmigaOS4: Minimum stack cookie to prevent stack overflow (patch #1107)
   * Additional screenmodes when SDL can't guess them (patch #1108)
   * Python AI works again. (bug #12955, bug #12913)
   * Fixed the :query command to work while in a multiplayer game, not only 
     when in chat (as /query)
   * Fixed invalid memory access with AMLAs (bug #12911)

Version 1.5.9:
 * Campaigns:
   * Descent into Darkness
     * In 'Endless Night', the enemy's gold now increases faster
   * The South Guard
     * Made 'Tides of War' a bit easier
   * Sceptre of Fire
     * Fix the player's keep disappearing in 'Gathering Materials'
     * New graphics for the Dwarvish Miner
   * Under the Burning Suns:
     * New base frames for the Desert Sentinel and Prowler
 * Graphics:
   * Removed the black background from some remaining old portraits
   * New portrait for Dwarf Thunderer, Dwarf Dragonguard, Human Pikeman, Dwarf
     Fighter, Dwarf Lord, Dwarf Guard, Mermaid Initiate, Dwarf Sentinel
   * Image-path functions:
     * All image path functions except RC() and TC() can now be stacked
       correctly and the order of precedence is from left to right. This