@@ -9,6 +9,7 @@ Version 1.5.9+svn:
         in scenario 2.
       * Kaleh's AMLAs have effect again past leveling to L2.
       * Made all human-controlled major characters unrenamable.
+
   * Graphics
     * New portraits: Halberdier, Dwarf Ulfserker line.
     * New or updated unit graphics: Elvish Enchantress, Orcish Slayer,
@@ -23,6 +24,9 @@ Version 1.5.9+svn:
     
   * Multiplayer
     * Updated maps: 4p Clash.
+
+  * User interface
+    * Removed the gamma correction option.
 
 Version 1.5.9:
   * Campaigns
